# workout_api

./: Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
alembic/: env.py
alembic/versions/: c006e8463eb4_init_db.py
workout_api/: __init__.py  main.py  routers.py
workout_api/atleta/: controller.py  models.py  schemas.py
workout_api/categorias/: controller.py  schemas.py
workout_api/centro_treinamento/: controller.py  models.py  schemas.py
workout_api/configs/: settings.py
